# tkweb

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  python-publish.yml
.github/workflows/assets/: .pypirc
src/: tkinter_browser.py
src/tkweb/: tkinter_browser.py
tests/: test.file
